// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShiftViewLargeHeader > renders correctly in large screen width less than 1450 1`] = `
<v-row-stub
  class="header-row--medium"
  data-v-d171e559=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <v-col-stub
    class="d-flex flex-column max-height-100"
    cols="5"
    data-v-d171e559=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <div
      class="d-flex"
      data-v-d171e559=""
    >
      <shift-view-evocon-logo-btn-stub
        class="ma-1"
        data-v-d171e559=""
        large="false"
      />
      <shift-view-station-select-stub
        class="ma-1 flex-grow-1"
        data-v-d171e559=""
        large="false"
        titleclass="text-body-large"
      />
    </div>
    <v-row-stub
      class="flex-grow-0"
      data-v-d171e559=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="d-flex flex-column"
        cols="5"
        data-v-d171e559=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <shift-view-shift-quantity-block-stub
          class="ma-1"
          compact="false"
          data-v-d171e559=""
          large="false"
          loading="false"
          maxshifttotalfontsize="24"
          minshifttotalfontsize="14"
          targetclass="text-body-medium"
          valueclass=""
        />
      </v-col-stub>
      <v-col-stub
        class="d-flex flex-column"
        cols="7"
        data-v-d171e559=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <shift-view-current-batch-block-stub
          class="ma-1 flex-grow-1"
          data-v-d171e559=""
          large="false"
          loading="false"
          progresstype="circle"
          showflagicon="false"
          valueclass="text-body-medium"
        />
      </v-col-stub>
    </v-row-stub>
    <shift-view-batch-widget-block-stub
      buttonsize="small"
      class="overflow-hidden ma-1"
      data-v-d171e559=""
      expanded="false"
      headerbottommarginclass="mb-1"
      large="false"
      loading="false"
      progresstype="circle"
      showcurrentbatch="false"
      valueclass="text-body-medium"
    />
  </v-col-stub>
  <v-col-stub
    class="d-flex max-height-100"
    cols="7"
    data-v-d171e559=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <v-row-stub
      class="overflow-hidden"
      data-v-d171e559=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="d-flex flex-column max-height-100"
        cols="8"
        data-v-d171e559=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <shift-view-shift-select-stub
          class="ma-1"
          compact="false"
          compactoffline="true"
          data-v-d171e559=""
          large="false"
          status="online"
          titleclass="text-body-large"
        />
        <widget-holder-stub
          class="ma-1 flex-grow-1"
          data-v-d171e559=""
          defaultactivetab="0"
          large="false"
          loading="false"
          openinbottomsheet="true"
          widgetkey="0"
          widgetvalueclass="text-display-small"
        />
      </v-col-stub>
      <v-col-stub
        class="d-flex flex-column max-height-100"
        cols="4"
        data-v-d171e559=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="d-flex"
          data-v-d171e559=""
        >
          <time-component-stub
            class="ma-1"
            data-v-d171e559=""
            large="false"
            timeclass="text-body-large"
          />
          <shift-view-user-settings-btn-stub
            class="ma-1"
            data-v-d171e559=""
            large="false"
          />
        </div>
        <oee-component-stub
          class="ma-1"
          data-v-d171e559=""
          expanded="false"
          labelclass=""
          loading="false"
          maxoeefontsize="24"
          minoeefontsize="14"
          oeeclass="text-headline-large"
          oeecomponentsclass="text-label-small"
          vertical="false"
        />
      </v-col-stub>
    </v-row-stub>
  </v-col-stub>
</v-row-stub>
`;

exports[`ShiftViewLargeHeader > renders correctly in large screen width more than 1450 1`] = `
<v-row-stub
  class="header-row--extra-large"
  data-v-d171e559=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <v-col-stub
    class="d-flex flex-column max-height-100"
    cols="5"
    data-v-d171e559=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <div
      class="d-flex"
      data-v-d171e559=""
    >
      <shift-view-evocon-logo-btn-stub
        class="ma-1"
        data-v-d171e559=""
        large="false"
      />
      <shift-view-station-select-stub
        class="ma-1 flex-grow-1"
        data-v-d171e559=""
        large="false"
        titleclass="text-headline-medium"
      />
    </div>
    <v-row-stub
      class="flex-grow-0"
      data-v-d171e559=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="d-flex flex-column"
        cols="5"
        data-v-d171e559=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <shift-view-shift-quantity-block-stub
          class="ma-1"
          compact="false"
          data-v-d171e559=""
          large="false"
          loading="false"
          maxshifttotalfontsize="48"
          minshifttotalfontsize="20"
          targetclass="text-headline-small"
          valueclass=""
        />
      </v-col-stub>
      <v-col-stub
        class="d-flex flex-column"
        cols="7"
        data-v-d171e559=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <shift-view-current-batch-block-stub
          class="ma-1 flex-grow-1"
          data-v-d171e559=""
          large="false"
          loading="false"
          progresstype="bar"
          showflagicon="true"
          valueclass="text-body-large"
        />
      </v-col-stub>
    </v-row-stub>
    <shift-view-batch-widget-block-stub
      buttonsize="default"
      class="overflow-hidden ma-1"
      data-v-d171e559=""
      expanded="false"
      headerbottommarginclass="mb-1"
      large="false"
      loading="false"
      progresstype="circle"
      showcurrentbatch="false"
      valueclass="text-body-large"
    />
  </v-col-stub>
  <v-col-stub
    class="d-flex max-height-100"
    cols="7"
    data-v-d171e559=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <v-row-stub
      class="overflow-hidden"
      data-v-d171e559=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="d-flex flex-column max-height-100"
        cols="8"
        data-v-d171e559=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <shift-view-shift-select-stub
          class="ma-1"
          compact="false"
          compactoffline="false"
          data-v-d171e559=""
          large="false"
          status="online"
          titleclass="text-headline-medium"
        />
        <widget-holder-stub
          class="ma-1 flex-grow-1"
          data-v-d171e559=""
          defaultactivetab="0"
          large="false"
          loading="false"
          openinbottomsheet="false"
          widgetkey="0"
          widgetvalueclass="text-display-small"
        />
      </v-col-stub>
      <v-col-stub
        class="d-flex flex-column max-height-100"
        cols="4"
        data-v-d171e559=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="d-flex"
          data-v-d171e559=""
        >
          <time-component-stub
            class="ma-1"
            data-v-d171e559=""
            large="false"
            timeclass="text-headline-medium"
          />
          <shift-view-user-settings-btn-stub
            class="ma-1"
            data-v-d171e559=""
            large="false"
          />
        </div>
        <oee-component-stub
          class="ma-1"
          data-v-d171e559=""
          expanded="false"
          labelclass=""
          loading="false"
          maxoeefontsize="48"
          minoeefontsize="20"
          oeeclass="text-display-small"
          oeecomponentsclass="text-body-medium"
          vertical="false"
        />
      </v-col-stub>
    </v-row-stub>
  </v-col-stub>
</v-row-stub>
`;

exports[`ShiftViewLargeHeader > renders correctly in medium screen width 1`] = `
<v-row-stub
  class="header-row--medium"
  data-v-d171e559=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <v-col-stub
    class="d-flex flex-column max-height-100"
    cols="5"
    data-v-d171e559=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <div
      class="d-flex"
      data-v-d171e559=""
    >
      <shift-view-evocon-logo-btn-stub
        class="ma-1"
        data-v-d171e559=""
        large="false"
      />
      <shift-view-station-select-stub
        class="ma-1 flex-grow-1"
        data-v-d171e559=""
        large="false"
        titleclass="text-body-large"
      />
    </div>
    <v-row-stub
      class="flex-grow-0"
      data-v-d171e559=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="d-flex flex-column"
        cols="5"
        data-v-d171e559=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <shift-view-shift-quantity-block-stub
          class="ma-1"
          compact="false"
          data-v-d171e559=""
          large="false"
          loading="false"
          maxshifttotalfontsize="24"
          minshifttotalfontsize="14"
          targetclass="text-body-medium"
          valueclass=""
        />
      </v-col-stub>
      <v-col-stub
        class="d-flex flex-column"
        cols="7"
        data-v-d171e559=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <shift-view-current-batch-block-stub
          class="ma-1 flex-grow-1"
          data-v-d171e559=""
          large="false"
          loading="false"
          progresstype="circle"
          showflagicon="false"
          valueclass="text-body-medium"
        />
      </v-col-stub>
    </v-row-stub>
    <shift-view-batch-widget-block-stub
      buttonsize="small"
      class="overflow-hidden ma-1"
      data-v-d171e559=""
      expanded="false"
      headerbottommarginclass="mb-1"
      large="false"
      loading="false"
      progresstype="circle"
      showcurrentbatch="false"
      valueclass="text-body-medium"
    />
  </v-col-stub>
  <v-col-stub
    class="d-flex max-height-100"
    cols="7"
    data-v-d171e559=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <v-row-stub
      class="overflow-hidden"
      data-v-d171e559=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="d-flex flex-column max-height-100"
        cols="8"
        data-v-d171e559=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <shift-view-shift-select-stub
          class="ma-1"
          compact="false"
          compactoffline="true"
          data-v-d171e559=""
          large="false"
          status="online"
          titleclass="text-body-large"
        />
        <widget-holder-stub
          class="ma-1 flex-grow-1"
          data-v-d171e559=""
          defaultactivetab="0"
          large="false"
          loading="false"
          openinbottomsheet="true"
          widgetkey="0"
          widgetvalueclass="text-display-small"
        />
      </v-col-stub>
      <v-col-stub
        class="d-flex flex-column max-height-100"
        cols="4"
        data-v-d171e559=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="d-flex"
          data-v-d171e559=""
        >
          <time-component-stub
            class="ma-1"
            data-v-d171e559=""
            large="false"
            timeclass="text-body-large"
          />
          <shift-view-user-settings-btn-stub
            class="ma-1"
            data-v-d171e559=""
            large="false"
          />
        </div>
        <oee-component-stub
          class="ma-1"
          data-v-d171e559=""
          expanded="false"
          labelclass=""
          loading="false"
          maxoeefontsize="24"
          minoeefontsize="14"
          oeeclass="text-headline-large"
          oeecomponentsclass="text-label-small"
          vertical="false"
        />
      </v-col-stub>
    </v-row-stub>
  </v-col-stub>
</v-row-stub>
`;

exports[`ShiftViewLargeHeader > renders correctly without shifts 1`] = `
<v-row-stub
  class=""
  data-v-d171e559=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <v-col-stub
    class="d-flex flex-column max-height-100"
    cols="5"
    data-v-d171e559=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <div
      class="d-flex"
      data-v-d171e559=""
    >
      <shift-view-evocon-logo-btn-stub
        class="ma-1"
        data-v-d171e559=""
        large="false"
      />
      <shift-view-station-select-stub
        class="ma-1 flex-grow-1"
        data-v-d171e559=""
        large="false"
        titleclass=""
      />
    </div>
    <!--v-if-->
    <!--v-if-->
  </v-col-stub>
  <v-col-stub
    class="d-flex max-height-100"
    cols="7"
    data-v-d171e559=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <v-row-stub
      class="overflow-hidden"
      data-v-d171e559=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="d-flex flex-column max-height-100"
        cols="8"
        data-v-d171e559=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <shift-view-shift-select-stub
          class="ma-1"
          compact="false"
          compactoffline="false"
          data-v-d171e559=""
          large="false"
          status="online"
          titleclass=""
        />
        <!--v-if-->
      </v-col-stub>
      <v-col-stub
        class="d-flex flex-column max-height-100"
        cols="4"
        data-v-d171e559=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="d-flex"
          data-v-d171e559=""
        >
          <time-component-stub
            class="ma-1"
            data-v-d171e559=""
            large="false"
            timeclass=""
          />
          <shift-view-user-settings-btn-stub
            class="ma-1"
            data-v-d171e559=""
            large="false"
          />
        </div>
        <!--v-if-->
      </v-col-stub>
    </v-row-stub>
  </v-col-stub>
</v-row-stub>
`;
